--- a/sass/modules/_mail.scss
+++ b/sass/modules/_mail.scss
@@ -11,7 +11,7 @@ label {
 
 input[type=text], input[type=email] {
     padding: 0.6em;
-    color: $heading-color;
+    color: #333;
     border-radius: 4px;
     width: 250px;
 }
