adding a bunch more stuff

--- a/sass/modules/_mail.scss
+++ b/sass/modules/_mail.scss
@@ -16,10 +16,12 @@ input[type=text], input[type=email], textarea {
     width: 250px;
 }
 
-textarea { resize: none; }
+textarea { resize: none; display: block; }
 
-input[type=submit] {
-    display: block;
+
+
+.submit-wrapper {
+    display: inline-block;
     margin-top: 2em;
     padding: 0.75rem 1rem;
     border-radius: 0.5rem;
@@ -29,4 +31,6 @@ input[type=submit] {
     color: white;
 
     &:hover { background-color: #5588c8}
+
+    span { padding-right: 0.5em; }
 }
