--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,5 +2,9 @@
 @import "modules/_vars.scss";
 @import "modules/_main.scss";
 
+// try font-awesome import
+@import "modules/font-awesome/scss/fontawesome.scss";
+@import "modules/font-awesome/scss/solid.scss";
+
 // components
 @import "modules/_mail.scss";
